--- a/html/loginSovicka/style.css
+++ b/html/loginSovicka/style.css
@@ -8,6 +8,11 @@ p{
     display: inline-block;
 }
 
+#inputs .error p{
+    color:red;
+}
+
+
 section{
     display: flex;
     align-items: center;
